Cart better version(A bit)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RegistrationLogin</string>
+    <string name="app_name">Plash Speed Delivery</string>
     <string name="help_details">Do let us know and we will help you any way that we can.</string>
     <string name="help_title">Facing a problem?</string>
     <string name="topic_title">Topic</string>
